clang/test/BSC/Negative/Method/Union/union_instance_function_call/union_instance_function_call.cbs
// RUN: %clang_cc1 -verify %s

union SimpleUnion {
  float uf;
  int ui;
  char uc;
};

int union SimpleUnion::getA(union SimpleUnion* this) { // expected-note {{'getA' declared here}}
  return this->ui;
}


int main() {
  union SimpleUnion u = {.ui = 1};
  u.getA(&u); // expected-error {{too many arguments to function call, expected 0, have 1}}
  return 0;
}